--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/platform-socket.io": "^6.10.14",
     "@nestjs/websockets": "^6.10.14",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
     "mongoose": "^5.8.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
