--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/platform-socket.io": "^6.10.14",
     "@nestjs/websockets": "^6.10.14",
+    "bcrypt": "^3.0.7",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "mongoose": "^5.8.9",
@@ -38,6 +39,7 @@
     "@nestjs/cli": "^6.14.0",
     "@nestjs/schematics": "^6.8.2",
     "@nestjs/testing": "^6.10.14",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.9.0",
     "@types/node": "^13.1.8",
