--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/express": "^4.17.1",
     "@types/jest": "^24.9.0",
     "@types/node": "^13.1.8",
+    "@types/passport-jwt": "^3.0.3",
     "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
