--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "class-validator": "^0.11.0",
     "mongoose": "^5.8.9",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -47,6 +49,8 @@
     "@types/express": "^4.17.1",
     "@types/jest": "^24.9.0",
     "@types/node": "^13.1.8",
+    "@types/passport-facebook": "^2.1.9",
+    "@types/passport-google-oauth20": "^2.0.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
